objects/ASI_CRM_Greater_Region__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_name__c</fullName>
        <label>CN name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_EN_name__c</fullName>
        <label>EN name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Greater_Region__c</fullName>
        <label>Greater Region code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RVP</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.CompanyName</field>
                <operation>equals</operation>
                <value>Pernod Ricard China</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Greater Region</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Greater_Region</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Greater Region</label>
    <listViews>
        <fullName>ASI_CRM_CN_Greater_Region</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_name__c</columns>
        <columns>ASI_CRM_EN_name__c</columns>
        <columns>ASI_CRM_Greater_Region__c</columns>
        <columns>ASI_CRM_RVP__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Greater_Region__c.ASI_CRM_CN_Greater_Region</value>
        </filters>
        <label>CN Greater Region</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_name__c</columns>
        <columns>ASI_CRM_EN_name__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>ASI_CRM_Greater_Region__c</columns>
        <columns>ASI_CRM_RVP__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Greater Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Greater Regions</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Greater_Region</fullName>
        <active>true</active>
        <label>CN Greater Region</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>